# projet_hello

projet-1/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet-1.glade  projet-1.gladep
projet-1/autom4te.cache/: output.0  requests  traces.0  traces.1
projet-1/po/: Makefile  Makefile.in
projet-1/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  greeting.c  greeting.h  interface.c  interface.c.bak  main.c  projet-1
projet-1/src/.deps/: main.Po
